<resources>
    <string name="app_name">OpenLibraryApp</string>
    <string name="nav_header_title">OpenLibrary</string>
    <string name="nav_header_subtitle">https://openlibrary.org</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">About</string>

    <string name="hint_search">Type OL235001321J</string>

    <string name="menu_remote_global">Remote</string>
    <string name="menu_local_global">Local</string>
    <string name="menu_details">Details</string>

    <string name="button_delete">Delete</string>
    <string name="button_save">Save</string>
    <string name="button_details">Details</string>

    <string name="button_ok">Ok</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_accept">Accept</string>

    <!-- Dialogs -->
    <string name="title_message">Operation successful</string>
    <string name="body_message">The operation was correctly</string>

    <string name="title_alert_message">Operation without data</string>
    <string name="body_alert_message">No information found for the selected book.</string>

    <string name="title_question_message">Delete book</string>
    <string name="body_question_message">Do you want to delete the selected book?</string>

    <string name="title_dialog_message">About</string>
    <string name="body_dialog_message">Name: OpenLibraryApp \nVersion: 1.0 \nCode: https://github.com/cadb-craftsman/architect-coders-project.git \n\nAuthor: cadb.craftsman@gmail.com</string>

    <!--Books Details Adapters-->
    <string name="book_title_label">Title:</string>
    <string name="book_olid_label">OLID:</string>
    <string name="book_subtitle_label">Subtitle:</string>
    <string name="book_language_label">Language:</string>
    <string name="book_authors_label">Authors:</string>
    <string name="book_pages_label">Book:</string>

    <string name="book_image">Book Image</string>
    <string name="book_title">Hoover\'s book of recipes</string>
    <string name="book_subtitle">an invaluable collection of private and practical recipes, and hidden secrets revealed.</string>
    <string name="book_language">/languages/eng</string>
    <string name="book_authors">M. S. Hoover</string>
    <string name="book_pages">134</string>
    <string name="book_url">/books/OL6561803M</string>
    <string name="title_activity_global_remote">GlobalRemoteActivity</string>

    <string name="without_title">Without title</string>
    <string name="without_subtitle">Without subtitle</string>
    <string name="without_language">Without language</string>
    <string name="without_authors">Without authors</string>

</resources>