<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_8">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/dimen_12">

            <ImageView
                android:id="@+id/thumbnail"
                android:layout_width="@dimen/dimen_80"
                android:layout_height="@dimen/dimen_80"
                android:contentDescription="@string/book_image"
                android:src="@drawable/ic_open_library_logo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/titleLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-medium"
                        android:layout_marginStart="@dimen/dimen_8"
                        android:paddingEnd="@dimen/dimen_12"
                        android:text="@string/book_title_label"
                        android:textColor="@color/book_title"
                        android:textSize="@dimen/dimen_text_15"
                        tools:ignore="RtlSymmetry" />

                    <TextView
                        android:id="@+id/title"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/book_title"
                        android:textColor="@color/book_title"
                        android:textSize="@dimen/dimen_text_15" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/olidLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingEnd="@dimen/dimen_16"
                        android:layout_marginStart="@dimen/dimen_8"
                        android:text="@string/book_olid_label"
                        android:textColor="@color/book_url"
                        android:textSize="@dimen/dimen_text_12"
                        tools:ignore="RtlSymmetry" />

                    <TextView
                        android:id="@+id/olid"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/book_url"
                        android:textColor="@color/book_url"
                        android:textSize="@dimen/dimen_text_12" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:paddingTop="@dimen/dimen_12"
                    android:paddingBottom="@dimen/dimen_12">

                    <TextView
                        android:id="@+id/btnSave"
                        style="@style/RoundedButtonNormal.Accent"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/dimen_8"
                        android:layout_marginEnd="@dimen/dimen_8"
                        android:paddingLeft="@dimen/dimen_16"
                        android:paddingTop="@dimen/dimen_6"
                        android:paddingRight="@dimen/dimen_16"
                        android:paddingBottom="@dimen/dimen_6"
                        android:text="@string/button_save" />

                    <TextView
                        android:id="@+id/btnDetails"
                        style="@style/RoundedButtonNormal.Accent"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/dimen_8"
                        android:layout_marginEnd="@dimen/dimen_8"
                        android:paddingLeft="@dimen/dimen_16"
                        android:paddingTop="@dimen/dimen_6"
                        android:paddingRight="@dimen/dimen_16"
                        android:paddingBottom="@dimen/dimen_6"
                        android:text="@string/button_details" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>
